--- a/mcop/app/src/main/res/values/colors.xml
+++ b/mcop/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="colorGreenSafe">#239B56</color>
     <color name="colorTextSafe">#0dccb4</color>
     <color name="colorTextWarning">#d4484e</color>
+    <color name="colorBlack">#000000</color>
 
     <color name="colorTagSafe">#2cbb9f</color>
     <color name="colorTagMedium">#eb6e0f</color>
