--- a/mcop/app/src/main/res/layout/activity_app_info.xml
+++ b/mcop/app/src/main/res/layout/activity_app_info.xml
@@ -145,7 +145,7 @@
         android:layout_marginRight="@dimen/activity_horizontal_margin"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:textStyle="bold"
-        android:text="Deteched by:"
+        android:text="@string/label_detect"
         />
 
     <TextView
