--- a/mcop/app/src/main/res/layout/activity_home.xml
+++ b/mcop/app/src/main/res/layout/activity_home.xml
@@ -137,28 +137,29 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="2"
+            android:layout_weight="1.6"
             android:layout_marginLeft="@dimen/activity_horizontal_margin"
             android:layout_marginRight="@dimen/activity_horizontal_margin"
             android:layout_marginBottom="@dimen/activity_horizontal_margin"
-
             >
 
             <TextView
                 android:id="@+id/title_total_install_textview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/activity_horizontal_margin"
+                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                 android:text="Total installed app"
                 android:textStyle="bold"
+                android:layout_above="@+id/title_app_using_internet_textview"
                 />
             <TextView
                 android:id="@+id/number_total_install_textview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/activity_horizontal_margin"
+                android:layout_marginRight="@dimen/activity_horizontal_margin"
                 android:layout_alignParentRight="true"
                 android:textStyle="bold"
+                android:layout_above="@+id/title_app_using_internet_textview"
                 />
 
             <TextView
@@ -166,7 +167,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/activity_horizontal_margin"
-                android:layout_below="@+id/title_total_install_textview"
+                android:layout_above="@+id/manage_app_button"
                 android:text="App using internet"
                 android:textStyle="bold"
                 />
@@ -175,7 +176,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/activity_horizontal_margin"
-                android:layout_below="@+id/title_total_install_textview"
+                android:layout_above="@+id/manage_app_button"
                 android:layout_alignParentRight="true"
                 android:textStyle="bold"
                 />
@@ -186,7 +187,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_alignParentBottom="true"
-                android:layout_marginBottom="@dimen/activity_horizontal_margin"
+                android:layout_marginBottom="@dimen/line_margin"
                 android:text="@string/label_manageapp"
                 android:textAllCaps="false"
                 android:background="@drawable/btn_selector"
